Chapter 3/jupyterhub/jhub-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: jhub
    meta.helm.sh/release-namespace: jupyter
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
  labels:
    app: jupyterhub
    app.kubernetes.io/managed-by: Helm
    chart: jupyterhub-3.3.5
    component: proxy-public
    heritage: Helm
    release: jhub
  name: proxy-public
  namespace: jupyter
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  loadBalancerClass: service.k8s.aws/nlb
  ports:
  - name: http
    nodePort: 32328
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: jupyterhub
    component: proxy
    release: jhub
  sessionAffinity: None
  type: LoadBalancer
