Chapter 3/jupyterhub/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juhb-ingress
  namespace: jupyter
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: ml-on-k8s
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/healthcheck-path: "/hub/login?next=%2Fhub%2F"
    alb.ingress.kubernetes.io/backend-protocol: "HTTPS"
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:096198301477:certificate/ec8cb7ac-acbf-42b1-9b49-7bf899339bb0
spec:
  rules:
    - host: jupyter.mlopsbook.online
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: proxy-public
                port:
                  number: 443
